--- a/src/style/app.css
+++ b/src/style/app.css
@@ -1,12 +1,4 @@
-/* styles in src/style directory are applied to the whole page */
-main {
-  padding: 1em;
-  text-align: center;
-  margin-top: 50px;
-  display: block;
-}
-
-footer {
-  text-align: center;
-  font-size: 0.8em;
+a,
+a label {
+    cursor: pointer;
 }
