--- a/src/app/components/items-views/items-table-view/items-table-view.tpl.html
+++ b/src/app/components/items-views/items-table-view/items-table-view.tpl.html
@@ -1,1 +1,6 @@
 Items <b>Table</b> View Component's content
+<br />
+Items:
+<div ng-repeat="item in $ctrl.state.itemsPages.foundItems">
+    name: {{ item.name }}
+</div>
