--- a/src/app/components/item-crud/item-crud.tpl.html
+++ b/src/app/components/item-crud/item-crud.tpl.html
@@ -1,2 +1,48 @@
-Item <b>create/edit</b> page <br />
-<a ng-click="$ctrl.openModal()">Show modal</a>
+<div class="item-crud">
+    <h2 ng-if="!$ctrl.state.crudPage.itemInForm.id">Create new item</h2>
+    <h2 ng-if="$ctrl.state.crudPage.itemInForm.id">Edit item</h2>
+
+    <form name="$ctrl.form">
+        <div class="input-group">
+            <span class="input-group-addon" id="sizing-addon1">Title</span>
+            <input type="text" ng-model="$ctrl.state.crudPage.itemInForm.title" class="form-control" placeholder="title">
+        </div>
+
+        <div class="input-group">
+            <span class="input-group-addon" id="sizing-addon2">Propery #1</span>
+            <input type="text" ng-model="$ctrl.state.crudPage.itemInForm.prop_1" class="form-control" placeholder="prop_1">
+        </div>
+
+        <div class="input-group">
+            <span class="input-group-addon" id="sizing-addon3">Propery #2</span>
+            <input type="text" ng-model="$ctrl.state.crudPage.itemInForm.prop_2" class="form-control" placeholder="prop_2">
+        </div>
+
+        <div class="input-group">
+            <span class="input-group-addon" id="sizing-addon4">Propery #3</span>
+            <input type="text" ng-model="$ctrl.state.crudPage.itemInForm.prop_3" class="form-control" placeholder="prop_3">
+        </div>
+
+        <h4>Item's Image</h4>
+        <div class="fileinput fileinput-new" data-provides="fileinput">
+            <span class="btn btn-default btn-file">
+                <span>Choose file or drop it here</span>
+                <input type="file" custom-on-change="$ctrl.updateFile" custom-on-drop="$ctrl.updateFile"/>
+            </span>
+        </div>
+
+        <h4 ng-if="$ctrl.state.crudPage.itemInForm.imageData !== ''">Item's preview</h4>
+        <img class="img-rounded preview-image" ng-src="{{ $ctrl.state.crudPage.itemInForm.imageData }}"/>
+
+    </form>
+
+    <button type="button" class="btn btn-default" ng-click="$ctrl.saveItem()">Save Item</button>
+    <button type="button" class="btn btn-default"
+            ng-click="$ctrl.deleteItem()"
+            ng-if="$ctrl.state.crudPage.itemInForm.id">
+        Delete Item
+    </button>
+    <button type="button" class="btn btn-default" ng-click="$ctrl.openModal()">Show modal</button>
+
+
+</div>
