--- a/src/app/components/items-views/items-tile-view/items-tile-view.style.scss
+++ b/src/app/components/items-views/items-tile-view/items-tile-view.style.scss
@@ -4,7 +4,18 @@
     max-height: 100px;
   }
 
+  .tile {
+    border: solid;
+    border-color: grey;
+    border-width: 1px;
+    border-bottom-right-radius: 4px;
+    border-bottom-left-radius: 4px;
+    padding: 10px;
+    margin-top: 20px;
+  }
+
   .row {
     text-align: center;
+    margin-top: 20px;
   }
 }
